--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/tdicomitis/node_intro_mis#readme",
   "dependencies": {
     "body-parser": "^1.16.1",
+    "ejs": "^2.5.5",
     "express": "^4.14.1"
   }
 }
